src/kubernetes/deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: spring-k8s-sample-deployment
spec:
  selector:
    matchLabels:
      app: spring-k8s-sample-app
  replicas: 3 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: spring-k8s-sample-app
    spec:
      containers:
      - name: spring-k8s-sample
        image: localhost:5000/spring-k8s-sample:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
