src/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-k8s-sample-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  tls:
  - secretName: your-tls-secret
  backend:
    serviceName: spring-k8s-sample-service
    servicePort: 8080
